css/style.css
/* =================================
------------------------------------
  Civic - CV Resume
  Version: 1.0
 ------------------------------------ 
 ====================================*/

/*----------------------------------------*/
/* Template default CSS
/*----------------------------------------*/
html,
body {
	font-family: 'Josefin Sans', sans-serif;
  	background-image: url("../img/mattblack-bg.jpg");
  	background-repeat: no-repeat;
  	background-attachment: fixed;
  	width: 100%;
  	background-size: cover;

}

h1,
h2,
h3,
h4,
h5,
h6 {
	color: #000;
	margin: 0;
	font-weight: 600;
	font-family: 'Josefin Sans', sans-serif;
	text-shadow: 2px 2px 4px #000000;
}

h2 {
	font-size: 48px;
}

h3 {
	font-size: 30px;
}

p {
	font-size: 18px;
	color: #000;
	line-height: 1.8;
	text-shadow: 1px 1px 2px #000000;
}

img {
	max-width: 100%;
}

input:focus,
select:focus,
button:focus,
textarea:focus {
	outline: none;
}

a:hover,
a:focus {
	text-decoration: none;
	outline: none;
}

ul,
ol {
	padding: 0;
	margin: 0;
}

/*---------------------
	Helper CSS
-----------------------*/
.spad {
	padding-top: 125px;
	padding-bottom: 110px;
}

.section-title h2 {
	display: inline-block;
	position: relative;
	margin-bottom: 110px;
	padding-bottom: 2px;
	line-height: normal;
}

.section-title h2:after {
	position: absolute;
	content: '';
	width: 100%;
	height: 2px;
	left: 0;
	bottom: 0;
	background: #000;
}

.set-bg {
	background-repeat: no-repeat;
	background-size: cover;
}

/*------------------------
  Common Elements
--------------------------*/

/* Preloder */
#preloder {
	position: fixed;
	width: 100%;
	height: 100%;
	top: 0;
	left: 0;
	z-index: 999999;
	background: #fff;
}

.loader {
	width: 30px;
	height: 30px;
	border: 3px solid #000;
	position: absolute;
	top: 50%;
	left: 50%;
	margin-top: -13px;
	margin-left: -13px;
	border-radius: 60px;
	border-left-color: transparent;
	animation: loader 0.8s linear infinite;
	-webkit-animation: loader 0.8s linear infinite;
}

@keyframes loader {
	0% {
		-webkit-transform: rotate(0deg);
		        transform: rotate(0deg);
	}
	50% {
		-webkit-transform: rotate(180deg);
		        transform: rotate(180deg);
	}
	100% {
		-webkit-transform: rotate(360deg);
		        transform: rotate(360deg);
	}
}

@-webkit-keyframes loader {
	0% {
		-webkit-transform: rotate(0deg);
	}
	50% {
		-webkit-transform: rotate(180deg);
	}
	100% {
		-webkit-transform: rotate(360deg);
	}
}

/* Site Buttons */
.site-btn {
	display: inline-block;
	text-transform: uppercase;
	font-size: 18px;
	text-shadow: 2px 2px 4px #000000;
	min-width: 150px;
	min-height: 20px;
	text-align: center;
	padding: 15px 10px 10px;
	position: relative;
	background-color: #CC0000;
	margin: 15px;
	border: 1px solid #000;
	color: #FFF;
	font-weight: 700;
	box-shadow: 2px 2px 4px #000;
}

.site-btn:hover {
	background-color: #FF0017;
	color: #FFF;
}

.circle-progress {
	text-align: center;
	padding-top: 30px;
	display: inline-block;
}

.circle-progress .prog-circle {
	margin-bottom: -155px;
}

.circle-progress canvas {
	-webkit-transform: rotate(90deg);
	-ms-transform: rotate(90deg);
	transform: rotate(90deg);
}

.circle-progress .progress-info {
	background: #f2f7f8;
	width: 127px;
	height: 127px;
	border-radius: 150px;
	margin: 0 auto;
	padding-top: 45px;
}

.circle-progress .progress-info h2 {
	font-size: 36px;
	color: #40424a !important;
}

.circle-progress .prog-title {
	text-align: center;
	margin-top: 55px;
}

.circle-progress .prog-title h3 {
	font-size: 16px;
	text-transform: uppercase;
}

.circle-progress .prog-title p {
	font-size: 15px;
	color: #808181 !important;
}

/* Image Popup */
.img-popup-warp .mfp-content,
.img-popup-warp.mfp-ready.mfp-removing .mfp-content {
	opacity: 0;
	-webkit-transform: scale(0.8);
	-ms-transform: scale(0.8);
	transform: scale(0.8);
	-webkit-transition: all 0.4s;
	-o-transition: all 0.4s;
	transition: all 0.4s;
}

.img-popup-warp.mfp-ready .mfp-content {
	opacity: 1;
	-webkit-transform: scale(1);
	-ms-transform: scale(1);
	transform: scale(1);
}

/* Fact box */
.fact-box {
	height: 375px;
	display: table;
	width: 100%;
	background: #40424a;
}

.fact-box.trans {
	background-color: transparent;
}

.fact-box .fact-content {
	display: table-cell;
	vertical-align: middle;
	text-align: center;
}

.fact-box .fact-content img {
	width: 60px;
	margin-bottom: 30px;
}

.fact-box .fact-content h2 {
	font-size: 36px;
	color: #fff;
}

.fact-box .fact-content p {
	color: #fff;
	margin-bottom: 0;
}

/* Porgess bar */
.single-progress-item {
	margin-bottom: 35px;
	position: relative;
}

.single-progress-item p {
	color: #40424a;
	margin-bottom: 0;
	font-weight: 600;
}

.progress-bar-style {
	display: block;
	height: 2px;
	position: relative;
	width: 100%;
	margin-bottom: 10px;
}

.bar-inner {
	position: absolute;
	height: 100%;
	left: 0;
	top: 0;
	background: #40424a;
}

.bar-inner span {
	position: absolute;
	right: 0;
	bottom: -30px;
	color: #40424a;
	font-weight: 600;
}

/* Progress dots */
.language-progress {
	max-width: 280px;
	list-style: none;
}

.language-progress li {
	font-size: 24px;
	position: relative;
	padding-right: 150px;
	margin-bottom: 30px;
}

.language-progress .lan-prog {
	position: absolute;
	right: 0;
	top: 0;
}

.language-progress .lan-prog span {
	width: 12px;
	height: 12px;
	display: inline-block;
	margin-right: 18px;
	border-radius: 12px;
	background: #40424a;
}

.language-progress .lan-prog span.fade-ele {
	background: #cacaca;
}

/* Icon Box */
.icon-box {
	text-align: center;
	display: inline-block;
	margin-right: 60px;
}

.icon-box:last-child {
	margin-right: 0;
}

.icon-box i {
	font-size: 60px;
}

.icon-box p {
	color: #40424a;
}

.social-links a {
	-webkit-transition: all 0.3s;
	-o-transition: all 0.3s;
	transition: all 0.3s;
}

/*---------------------
	Header section
-----------------------*/
.header-section {
	padding: 0px;
}

.site-logo h2 {
	font-size: 36px;
}

.site-logo h2 a {
	color: #40424a;
}

.site-logo p {
	font-size: 14px;
	line-height: normal;
}
/* ... */

